--- a/gettext-tools/examples/hello-c-gnome3/Makefile.am
+++ b/gettext-tools/examples/hello-c-gnome3/Makefile.am
@@ -11,10 +11,12 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = m4 po
 
 # The list of programs that are built.
-bin_PROGRAMS = hello
+bin_PROGRAMS = hello hello2
 
 # The source files of the 'hello' program.
-hello_SOURCES = hello.c resources.c
+hello_SOURCES = hello.c hello-resources.c
+# The source files of the 'hello2' program.
+hello2_SOURCES = hello2.c hello2-resources.c
 
 # Define a C macro LOCALEDIR indicating where catalogs will be installed
 # and a C macro PKGDATADIR indicating a package-specific location.
@@ -30,11 +32,14 @@ AM_CPPFLAGS = $(GTK_CFLAGS)
 LDADD = $(GTK_LIBS) @LIBINTL@
 
 # Compile GSettings schema.
-gschemas.compiled: hello.gschema.xml
+gschemas.compiled: hello2.gschema.xml
 	$(AM_V_GEN) $(GLIB_COMPILE_SCHEMAS) --targetdir=. $(srcdir)
 
 # Compile assets into a C source and link it with the application.
-resources.c: hello.gresource.xml hello.ui
+hello-resources.c: hello.gresource.xml hello.ui
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ \
+		--sourcedir=$(srcdir) --generate-source
+hello2-resources.c: hello2.gresource.xml hello2.ui
 	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ \
 		--sourcedir=$(srcdir) --generate-source
 
@@ -43,7 +48,7 @@ resources.c: hello.gresource.xml hello.ui
 pkgdata_DATA = gschemas.compiled
 
 desktopdir = $(datadir)/applications
-desktop_DATA = hello.desktop
+desktop_DATA = hello.desktop hello2.desktop
 
 # Merge translations back into a Desktop Entry file.
 
@@ -52,18 +57,24 @@ desktop_DATA = hello.desktop
 # the 'msgfmt' command will be required at compile-time.
 hello.desktop.in: hello.desktop.in.in
 	$(AM_V_GEN) $(MSGFMT) --desktop --template $< -d $(top_srcdir)/po -o $@
+hello2.desktop.in: hello2.desktop.in.in
+	$(AM_V_GEN) $(MSGFMT) --desktop --template $< -d $(top_srcdir)/po -o $@
 
 # Substitute variables in a Desktop Entry file.
 hello.desktop: hello.desktop.in
 	$(AM_V_GEN) sed -e 's|@bindir[@]|$(bindir)|g' $< > $@
+hello2.desktop: hello2.desktop.in
+	$(AM_V_GEN) sed -e 's|@bindir[@]|$(bindir)|g' $< > $@
 
-BUILT_SOURCES        = gschemas.compiled resources.c hello.desktop
-CLEANFILES           = gschemas.compiled             hello.desktop
+BUILT_SOURCES        = gschemas.compiled hello-resources.c hello2-resources.c hello.desktop hello2.desktop
+CLEANFILES           = gschemas.compiled                                      hello.desktop hello2.desktop
 DISTCLEANFILES       =
-MAINTAINERCLEANFILES =                   resources.c hello.desktop.in
+MAINTAINERCLEANFILES =                   hello-resources.c hello2-resources.c hello.desktop.in hello2.desktop.in
 
 # Additional files to be distributed.
-EXTRA_DIST = autogen.sh autoclean.sh hello.ui \
+EXTRA_DIST = autogen.sh autoclean.sh \
 	hello.desktop.in.in hello.desktop.in \
-	hello.gschema.xml \
-	hello.gresource.xml
+	hello.gresource.xml hello.ui \
+	hello2.desktop.in.in hello2.desktop.in \
+	hello2.gresource.xml hello2.ui \
+	hello2.gschema.xml
