New example 'hello-c++-gnome3'.
* gettext-tools/examples/hello-c++-gnome3: New directory, based on
gettext-tools/examples/hello-c-gnome3.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Update.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS,
SMALLPOFILES_FOR_lang): Update.
* gettext-tools/examples/README: Update.
* gettext-tools/examples/check-examples: Handle this directory as well.
* NEWS: Mention the new example.
* HACKING: Mention the gtkmm dependency.

--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -155,6 +155,20 @@ EXAMPLESFILES = \
   hello-c++-gnome2/po/Makevars \
   hello-c++-gnome2/po/POTFILES.in \
   \
+  hello-c++-gnome3/INSTALL \
+  hello-c++-gnome3/README \
+  hello-c++-gnome3/autogen.sh \
+  hello-c++-gnome3/autoclean.sh \
+  hello-c++-gnome3/hello.cc \
+  hello-c++-gnome3/hello.desktop.in.in \
+  hello-c++-gnome3/hello.gresource.xml \
+  hello-c++-gnome3/hello.ui \
+  hello-c++-gnome3/Makefile.am \
+  hello-c++-gnome3/configure.ac \
+  hello-c++-gnome3/m4/Makefile.am \
+  hello-c++-gnome3/po/Makevars \
+  hello-c++-gnome3/po/POTFILES.in \
+  \
   hello-c++-wxwidgets/INSTALL \
   hello-c++-wxwidgets/autogen.sh \
   hello-c++-wxwidgets/autoclean.sh \
@@ -405,6 +419,7 @@ EXAMPLESDIRS = \
   hello-c++-qt \
   hello-c++-kde \
   hello-c++-gnome2 \
+  hello-c++-gnome3 \
   hello-c++-wxwidgets \
   hello-objc \
   hello-objc-gnustep \
