--- a/gettext-tools/examples/hello-objc/configure.ac
+++ b/gettext-tools/examples/hello-objc/configure.ac
@@ -9,7 +9,10 @@ AM_INIT_AUTOMAKE([1.11])
 
 dnl Test for gobjc before gcc, since that's what the EPEL 9 package 'gcc-objc'
 dnl installs (on systems where gcc does not support Objective C).
+m4_pushdef([AC_MSG_FAILURE], m4_defn([AC_MSG_WARN]))
 AC_PROG_OBJC([gobjc gcc objcc objc cc CC clang])
+m4_popdef([AC_MSG_FAILURE])
+
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION([0.23])
 
