libtextstyle: Fix a test failure on MSYS2.
* libtextstyle/gnulib-local/tests/test-term-ostream-xterm-msys2.out: New file.
* libtextstyle/gnulib-local/tests/test-term-ostream-xterm.sh: Use it as an
expected test result.
* libtextstyle/gnulib-local/modules/term-ostream-tests (Files): Add it.
* libtextstyle/Makefile.am (EXTRA_DIST): Likewise.

--- a/libtextstyle/Makefile.am
+++ b/libtextstyle/Makefile.am
@@ -175,6 +175,7 @@ EXTRA_DIST = \
   gnulib-local/tests/test-term-ostream-xterm-linux-debian.out \
   gnulib-local/tests/test-term-ostream-xterm-linux-mandriva.out \
   gnulib-local/tests/test-term-ostream-xterm-mingw.out \
+  gnulib-local/tests/test-term-ostream-xterm-msys2.out \
   gnulib-local/tests/test-term-ostream-xterm-netbsd3.out \
   gnulib-local/tests/test-term-ostream-xterm-osf51.out \
   gnulib-local/tests/test-term-ostream-xterm-r6.out \
