build: Improve package version handling.
* autogen.sh: Copy also m4/init-package-version.m4, m4/version-stamp.m4.
* configure.ac: Use gl_INIT_PACKAGE and gl_CONFIG_VERSION_STAMP.
* gettext-runtime/configure.ac: Use gl_INIT_PACKAGE.
* gettext-runtime/intl/configure.ac: Likewise.
* gettext-tools/configure.ac: Likewise.
* gettext-tools/examples/configure.ac: Likewise.
* Makefile.am (dist-tarball-version): New target.
($(top_srcdir)/.version): Remove target.

--- a/.gitignore
+++ b/.gitignore
@@ -388,6 +388,8 @@
 /gettext-tools/tests/gnulib-lib/
 !/gettext-tools/tests/gnulib-lib/Makefile.am
 /gettext-tools/tests/init.sh
+/m4/init-package-version.m4
+/m4/version-stamp.m4
 
 # Files brought in by "automake --add-missing --copy":
 /build-aux/compile
