--- a/gettext-runtime/intl/configure.ac
+++ b/gettext-runtime/intl/configure.ac
@@ -1,5 +1,5 @@
 dnl Configuration for the gettext-runtime directory of GNU gettext
-dnl Copyright (C) 1995-2024 Free Software Foundation, Inc.
+dnl Copyright (C) 1995-2025 Free Software Foundation, Inc.
 dnl
 dnl This program is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -17,11 +17,14 @@ dnl along with this program.  If not, see <https://www.gnu.org/licenses/>.
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.64])
-AC_INIT([libintl],
-	m4_esyscmd([../../build-aux/git-version-gen ../../.tarball-version]),
-	[bug-gettext@gnu.org])
+AC_INIT
+PACKAGE_BUGREPORT='bug-gettext@gnu.org'
 AC_CONFIG_SRCDIR([dcigettext.c])
 AC_CONFIG_AUX_DIR([../../build-aux])
+VERSION_NUMBER=`cd $srcdir/../.. \
+                && build-aux/git-version-gen .tarball-version \
+                   | sed -e 's/dirty$/modified/'`
+gl_INIT_PACKAGE([libintl], [$VERSION_NUMBER])
 AM_INIT_AUTOMAKE([silent-rules])
 AC_CONFIG_HEADERS([config.h])
 
