--- a/configure.ac
+++ b/configure.ac
@@ -17,14 +17,13 @@ dnl along with this program.  If not, see <https://www.gnu.org/licenses/>.
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.64])
-AC_INIT
-PACKAGE_BUGREPORT='bug-gettext@gnu.org'
+AC_INIT([gettext], [dummy], [bug-gettext@gnu.org])
 AC_CONFIG_SRCDIR([gettext-tools/src/msgfmt.c])
 AC_CONFIG_AUX_DIR([build-aux])
 VERSION_NUMBER=`cd $srcdir \
                 && build-aux/git-version-gen .tarball-version \
                    | sed -e 's/dirty$/modified/'`
-gl_INIT_PACKAGE([gettext], [$VERSION_NUMBER])
+gl_INIT_PACKAGE_VERSION([$VERSION_NUMBER])
 AM_INIT_AUTOMAKE([1.13 silent-rules parallel-tests tar-ustar])
 
 dnl Override automake's tar command used for creating distributions:
