--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -17,14 +17,13 @@ dnl along with this program.  If not, see <https://www.gnu.org/licenses/>.
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.64])
-AC_INIT
-PACKAGE_BUGREPORT='bug-gettext@gnu.org'
+AC_INIT([gettext-tools], [dummy], [bug-gettext@gnu.org])
 AC_CONFIG_SRCDIR([src/msgfmt.c])
 AC_CONFIG_AUX_DIR([../build-aux])
 VERSION_NUMBER=`cd $srcdir/.. \
                 && build-aux/git-version-gen .tarball-version \
                    | sed -e 's/dirty$/modified/'`
-gl_INIT_PACKAGE([gettext-tools], [$VERSION_NUMBER])
+gl_INIT_PACKAGE_VERSION([$VERSION_NUMBER])
 AM_INIT_AUTOMAKE([1.11.1 silent-rules parallel-tests])
 AC_CONFIG_HEADERS([config.h])
 
