build: Update package version handling after gnulib changed.
* configure.ac: Drop postprocessing of git-version-gen output.
* gettext-runtime/configure.ac: Likewise.
* gettext-runtime/intl/configure.ac: Likewise.
* gettext-tools/configure.ac: Likewise.
* gettext-tools/examples/configure.ac: Likewise.

--- a/gettext-runtime/intl/configure.ac
+++ b/gettext-runtime/intl/configure.ac
@@ -21,8 +21,7 @@ AC_INIT([libintl], [dummy], [bug-gettext@gnu.org])
 AC_CONFIG_SRCDIR([dcigettext.c])
 AC_CONFIG_AUX_DIR([../../build-aux])
 VERSION_NUMBER=`cd $srcdir/../.. \
-                && build-aux/git-version-gen .tarball-version \
-                   | sed -e 's/dirty$/modified/'`
+                && build-aux/git-version-gen .tarball-version`
 gl_INIT_PACKAGE_VERSION([$VERSION_NUMBER])
 AM_INIT_AUTOMAKE([silent-rules])
 AC_CONFIG_HEADERS([config.h])
