Rust: Add lang-rust unit test.
* gettext-tools/tests/init.cfg (this_test_is_longrunning_): New function.
* gettext-tools/tests/lang-rust: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* HACKING: Reorder. Document prerequisites for Rust unit test.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -223,6 +223,7 @@ TESTS = gettext-1 gettext-2 \
 	lang-csharp \
 	lang-javascript \
 	lang-guile lang-clisp lang-elisp lang-librep \
+	lang-rust \
 	lang-ruby \
 	lang-sh lang-bash \
 	lang-gawk \
