--- a/gettext-tools/tests/init.cfg
+++ b/gettext-tools/tests/init.cfg
@@ -57,3 +57,17 @@ func_filter_POT_Creation_Date ()
     || Exit 1
   LC_ALL=C tr -d '\r' < "$1".tmq > "$2" || Exit 1
 }
+
+# Skip the rest of this test if execution of long-running tests is undesired.
+this_test_is_longrunning_ ()
+{
+  if test "$RUN_LONGRUNNING_TESTS" != yes; then
+    echo 'This is a longrunning test, disabled by default,
+To run it anyway, rerun "make check" with the RUN_LONGRUNNING_TESTS
+environment variable set to yes.  E.g.,
+
+  env RUN_LONGRUNNING_TESTS=yes make check
+' 1>&2
+    Exit 77
+  fi
+}
